--- a/css/styles.css
+++ b/css/styles.css
@@ -342,3 +342,7 @@ footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
     text-align:center;
     cursor:pointer;
 }
+
+#timestamp-div{
+  font-size:10px;
+}
