upload fixtures/results section

--- a/css/styles.css
+++ b/css/styles.css
@@ -477,3 +477,8 @@ th.aes:after {
   border-bottom:1px solid #cecece;
   border-top:1px solid #cecece;
 }
+
+#next_gw_fixtures{
+  height:300px;
+  overflow-y: scroll;
+}
