--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 	cursor: default;
 }*/
 .navbar-custom{
-	background-color: #360F39;
+	background-color: #320936;
 }
 
 .tooltip {
@@ -215,7 +215,7 @@ tr:nth-of-type(odd) {
 	background: #eee; 
 }
 th { 
-	background: #360F39; 
+	background: #320936; 
 	color: white; 
 	font-weight: bold; 
 	background-repeat: no-repeat;
@@ -239,7 +239,7 @@ table .table_fx {
 	background: #eee; 
 }
 .table_fx th { 
-	background: #360F39; 
+	background: #320936; 
 	color: white; 
 	font-weight: bold; 
 	background-repeat: no-repeat;
@@ -271,7 +271,7 @@ table .table_fx {
 	background: #eee; 
 }
 .table_nx th { 
-	background: #360F39; 
+	background: #320936; 
 	color: white; 
 	font-weight: bold; 
 	background-repeat: no-repeat;
@@ -325,7 +325,7 @@ table .table_fx {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #360F39;
+  background-color: #320936;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -367,7 +367,7 @@ input:checked + .slider:before {
 }
 
 .col_white_amrc { color:#FFF;}
-footer { width:100%; background-color:#360F39; min-height:250px; padding:10px 0px 25px 0px ;}
+footer { width:100%; background-color:#320936; min-height:250px; padding:10px 0px 25px 0px ;}
 .pt2 { padding-top:40px ; margin-bottom:20px ;}
 footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
 .mb10 { padding-bottom:15px; text-align:justify;}
@@ -439,13 +439,13 @@ footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
 
 #contactform{
     text-align:center;
-    background-color:#360F39;
+    background-color:#320936;
     color:white;
     padding:10px;
     border-radius:10px;
 }
 #button{
-    background-color:#360F39;
+    background-color:#320936;
     color:white;
     border-radius: 10%;
     border-color:#19AD59;
